--- a/config/config.php.sample
+++ b/config/config.php.sample
@@ -7,7 +7,8 @@
 ActiveRecord\Config::initialize(function ($cfg) {
     $cfg->set_model_directory(dirname(__FILE__) . '/../models');
 	// see http://phpactiverecord.org/docs/ActiveRecord/Config
-    $cfg->set_connections(array('development' => 'sqlite://unix(/tmp/dolddatastore.db)'));
+    // $cfg->set_connections(array('development' => 'sqlite://unix(/tmp/dolddatastore.db)'));
+    // $cfg->set_connections(array('development' => 'mysql://dolmon:pass@localhost/dolmon'));
 });
 
 
